# Estudy

./: .env  .gitignore  Cargo.toml  diesel.toml  tailwind.config.js
src/: database.rs  error.rs  main.rs  routes.rs
src/models/: mod.rs  models.rs  schema.rs
src/models/achievement/: models.rs
src/models/group/: models.rs
src/models/offlinetest/: models.rs
src/models/onlinetest/: models.rs
src/models/question/: models.rs
src/models/user/: models.rs  utils.rs
static/: output.css
templates/: base.html  createcontest.html  home.html  intro.html  question.html
