[package]
name = "estudy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-utils = "3.0.1"
actix-web = "4.9.0"
ammonia = "4.0.0"
bcrypt = "0.16.0"
chrono = { version = "0.4.38", features = ["serde"] }
cookie = { version = "0.18.1", features = ["secure", "signed"] }
diesel = { version = "2.2.5", features = ["postgres", "r2d2"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
jsonwebtoken = "9.3.0"
log = "0.4.22"
minijinja = { version = "2.5.0", features = ["loader", "unicode"] }
minijinja-autoreload = "2.5.0"
r2d2 = "0.8.10"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
uuid = { version = "1.11.0", features = ["v4"] }
